[project]
name = "yandex-dl-course-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "pillow>=11.3.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "timm>=1.0.8",
    "torch>=2.3",
    "torchmetrics>=1.4",
    "torchvision>=0.18",
    "notebook>=7.0",
]
